# repensar-multiplatform-backend

./: .dockerignore  .env.example  .env.production.example  .gitignore  AGENTS.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  JWT_TOKEN_MANAGEMENT_SUMMARY.md  README.md  V2_CONVERSION_SUMMARY.md  alembic.ini  db.sql  docker-compose.yml  nixpacks.toml  openapi.json  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 000_initial_schema.py  001_add_token_family_to_users.py  002_add_oauth_fields_to_users.py  003_add_sync_indexes.py  004_create_sync_tables.py  005_add_notification_indexes.py  006_create_uploaded_files_table.py  007_seed_initial_user_types.py  008_create_communication_tables.py  009_create_gamification_tables.py  010_seed_gamification_data.py  011_create_blog_tables.py  012_create_newsletter_tables.py  013_create_activity_log_partitions_2026_2027.py  014_add_onboarding_completed_to_volunteers.py  (+4 more)
app/: __init__.py  main.py
app/core/: auth.py  (+11 more)
docs/: COMMUNICATION_MODULE.md  GAMIFICATION_API_SPEC.md  GAMIFICATION_MODULE.md  MIGRATION_TO_ALEMBIC.md  QUICK_REFERENCE.md  README.md  SPRINT2_SUMMARY.md  STATS_API_SPEC.md  V2_CONVERSION_SUMMARY.md  authentication.md  database-setup.md  manual-testing-playbook.md  offline-sync.md  ui-specification.md
scripts/: README.md  __init__.py  clear_data.py  clear_data.sql  seed_data.py  test_fixes.py
tests/: conftest.py  test_auth_core.py  test_auth_routes.py  test_gamification.py  test_models.py  test_notifications.py  test_projects.py  test_resources.py  test_schemas.py  test_tasks.py  test_volunteers.py
(+81 files in other folders)
